Added Composer requirement for ext-gd.

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     ],
     "require": {
         "php": "^7.4 || ^8.0",
+        "ext-gd": "*",
         "composer-plugin-api": "^2.3"
     },
     "config": {
